Gerald Boland = André Moyen? It's the same pic

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -3133,6 +3133,8 @@
 	 Jean_Duvieusart_dead:0 " is incapable of holding this post."
 	 BEL_Louis_Franck_eco_sco:0 "Louis Franck"
 	 Louis_Franck_dead:0 " is incapable of holding this post."
+	 BEL_Hendrik_de_Man_eco_ade:0 "Hendrik de Man"
+	 Hendrik_de_Man_dead:0 " is incapable of holding this post."
 	 BEL_Charles_Somville_eco_pau:0 "Charles Somville"
 	 Charles_Somville_dead:0 " is incapable of holding this post."
 	 BEL_Joris_Van_Severen_eco_pau:0 "Joris Van Severen"
@@ -3257,6 +3259,8 @@
 	 Jan_Rijckoort_dead:0 " is incapable of holding this post."
 	 BEL_Joris_Van_Severen_int_pau:0 "Joris Van Severen"
 	 Joris_Van_Severen_dead:0 " is incapable of holding this post."
+	 BEL_Andre_Moyen_int_npo:0 "André Moyen"
+	 Andre_Moyen_dead:0 " is incapable of holding this post."
 	 BEL_Paul_Ouwerx_int_npo:0 "Paul Ouwerx"
 	 Paul_Ouwerx_dead:0 " is incapable of holding this post."
 
@@ -10381,16 +10385,16 @@
 	 Phil_Piratin_dead:0 " is incapable of holding this post."
 	 ENG_William_Joyce_hog_tot:0 "William Joyce"
 	 William_Joyce_dead:0 " is incapable of holding this post."
-	 ENG_Annie_Kenney_hog_syn:0 "Annie Kenney"
-	 Annie_Kenney_dead:0 " is incapable of holding this post."
+	 ENG_Sylvia_Pankhurst_hog_syn:0 "Sylvia Pankhurst"
+	 Sylvia_Pankhurst_dead:0 " is incapable of holding this post."
 	 ENG_Arthur_Greenwood_hog_syn:0 "Arthur Greenwood"
 	 Arthur_Greenwood_dead:0 " is incapable of holding this post."
 	 ENG_Arthur_Horner_hog_syn:0 "Arthur Horner"
 	 Arthur_Horner_dead:0 " is incapable of holding this post."
 	 ENG_Barbara_Castle_hog_syn:0 "Barbara Castle"
 	 Barbara_Castle_dead:0 " is incapable of holding this post."
-	 ENG_Christabel_Pankhurst_hog_syn:0 "Christabel Pankhurst"
-	 Christabel_Pankhurst_dead:0 " is incapable of holding this post."
+	 ENG_Eleanor_Rathbone_hog_syn:0 "Eleanor Rathbone"
+	 Eleanor_Rathbone_dead:0 " is incapable of holding this post."
 	 ENG_Clement_Attlee_hog_syn:0 "Clement Attlee"
 	 Clement_Attlee_dead:0 " is incapable of holding this post."
 	 ENG_GDH_Cole_hog_syn:0 "G.D.H. Cole"
@@ -10529,8 +10533,8 @@
 	 William_Rust_dead:0 " is incapable of holding this post."
 	 ENG_Abe_Moffat_eco_syn:0 "Abe Moffat"
 	 Abe_Moffat_dead:0 " is incapable of holding this post."
-	 ENG_Annie_Kenney_eco_syn:0 "Annie Kenney"
-	 Annie_Kenney_dead:0 " is incapable of holding this post."
+	 ENG_Sylvia_Pankhurst_eco_syn:0 "Sylvia Pankhurst"
+	 Sylvia_Pankhurst_dead:0 " is incapable of holding this post."
 	 ENG_Arthur_MacManus_eco_syn:0 "Arthur MacManus"
 	 Arthur_MacManus_dead:0 " is incapable of holding this post."
 	 ENG_Barbara_Castle_eco_syn:0 "Barbara Castle"
@@ -15499,8 +15503,6 @@
 	 Sophocles_Venizelos_dead:0 " is incapable of holding this post."
 	 GRE_Constantinos_Demertzis_for_ade:0 "Constantinos Demertzis"
 	 Constantinos_Demertzis_dead:0 " is incapable of holding this post."
-	 GRE_Ioannes_Socrates_Politis_for_ade:0 "Ioannes Socrates Politis"
-	 Ioannes_Socrates_Politis_dead:0 " is incapable of holding this post."
 	 GRE_Ioannis_Safianopoulos_for_ade:0 "Ioannis Safianopoulos"
 	 Ioannis_Safianopoulos_dead:0 " is incapable of holding this post."
 	 GRE_Panagiotios_Demestichas_for_ade:0 "Panagiotios Demestichas"
@@ -15527,8 +15529,6 @@
 	 Alexandros_Svolos_dead:0 " is incapable of holding this post."
 	 GRE_Demetrios_Gousis_eco_sli:0 "Demetrios Gousis"
 	 Demetrios_Gousis_dead:0 " is incapable of holding this post."
-	 GRE_Markos_Aganossos_eco_sli:0 "Markos Aganossos"
-	 Markos_Aganossos_dead:0 " is incapable of holding this post."
 	 GRE_Themistocles_Sophoulis_eco_sli:0 "Themistocles Sophoulis"
 	 Themistocles_Sophoulis_dead:0 " is incapable of holding this post."
 	 GRE_Theodoros_Marsal_eco_sli:0 "Theodoros Marsal"
@@ -15543,12 +15543,8 @@
 	 Antoine_Frangulis_dead:0 " is incapable of holding this post."
 	 GRE_Eleftherios_Venizelos_eco_sco:0 "Eleftherios Venizelos"
 	 Eleftherios_Venizelos_dead:0 " is incapable of holding this post."
-	 GRE_Gaecia_Geanados_eco_sco:0 "Gaecia Geanados"
-	 Gaecia_Geanados_dead:0 " is incapable of holding this post."
 	 GRE_Giorgios_Lavdas_eco_sco:0 "Giorgios Lavdas"
 	 Giorgios_Lavdas_dead:0 " is incapable of holding this post."
-	 GRE_Takis_Pipenelis_eco_sco:0 "Takis Pipenelis"
-	 Takis_Pipenelis_dead:0 " is incapable of holding this post."
 	 GRE_Thanassos_Exaharis_eco_sco:0 "Thanassos Exaharis"
 	 Thanassos_Exaharis_dead:0 " is incapable of holding this post."
 	 GRE_Georgios_Mantzavinos_eco_ade:0 "Georgios Mantzavinos"
@@ -15581,10 +15577,6 @@
 	 Evangelos_Papanoutsos_dead:0 " is incapable of holding this post."
 	 GRE_Georgios_Papandreou_sec_sli:0 "Georgios Papandreou"
 	 Georgios_Papandreou_dead:0 " is incapable of holding this post."
-	 GRE_Markos_Aganossos_sec_sli:0 "Markos Aganossos"
-	 Markos_Aganossos_dead:0 " is incapable of holding this post."
-	 GRE_Panagiolis_Poulitsas_sec_sli:0 "Panagiolis Poulitsas"
-	 Panagiolis_Poulitsas_dead:0 " is incapable of holding this post."
 	 GRE_Dimitrios_Maximos_sec_sco:0 "Dimitrios Maximos"
 	 Dimitrios_Maximos_dead:0 " is incapable of holding this post."
 	 GRE_Giorgios_Nicolaidis_sec_sco:0 "Giorgios Nicolaidis"
@@ -15605,16 +15597,10 @@
 	 Archbishop_Damaskinos_dead:0 " is incapable of holding this post."
 	 GRE_Christos_Triantafyllidis_sec_ade:0 "Christos Triantafyllidis"
 	 Christos_Triantafyllidis_dead:0 " is incapable of holding this post."
-	 GRE_Georgios_Logothetis_sec_ade:0 "Georgios Logothetis"
-	 Georgios_Logothetis_dead:0 " is incapable of holding this post."
 	 GRE_Christos_Tsigantes_sec_pau:0 "Christos Tsigantes"
 	 Christos_Tsigantes_dead:0 " is incapable of holding this post."
 	 GRE_Roberto_Rastapopoulos_sec_pau:0 "Roberto Rastapopoulos"
 	 Roberto_Rastapopoulos_dead:0 " is incapable of holding this post."
-	 GRE_Grigoriev_Murnov_sec_npo:0 "Grigoriev Murnov"
-	 Grigoriev_Murnov_dead:0 " is incapable of holding this post."
-	 GRE_Mario_Vercellino_sec_npo:0 "Mario Vercellino"
-	 Mario_Vercellino_dead:0 " is incapable of holding this post."
 	 GRE_Reinhard_Altenburg_sec_npo:0 "Reinhard Altenburg"
 	 Reinhard_Altenburg_dead:0 " is incapable of holding this post."
 
@@ -15635,9 +15621,7 @@
 	 Georgios_Drossopoulos_dead:0 " is incapable of holding this post."
 	 GRE_Georgios_Streit_int_sco:0 "Georgios Streit"
 	 Georgios_Streit_dead:0 " is incapable of holding this post."
-	 GRE_Georgios_Logothetis_int_ade:0 "Georgios Logothetis"
-	 Georgios_Logothetis_dead:0 " is incapable of holding this post."
-	 GRE_Napoleon_Zervas_int_ade:0 "Napoléon Zervas"
+	 GRE_Napoleon_Zervas_int_ade:0 "Napoleon Zervas"
 	 Napoleon_Zervas_dead:0 " is incapable of holding this post."
 	 GRE_Alchibiades_Stephanopoulos_int_pau:0 "Alchibiades Stephanopoulos"
 	 Alchibiades_Stephanopoulos_dead:0 " is incapable of holding this post."
@@ -15653,8 +15637,6 @@
 	### Military High Command ###
 	 GRE_Stephanos_Sarafis_mhc_tot:0 "Stephanos Sarafis"
 	 Stephanos_Sarafis_dead:0 " is incapable of holding this post."
-	 GRE_Anastassios_Sakellariou_mhc_sco:0 "Anastassios Sakellariou"
-	 Anastassios_Sakellariou_dead:0 " is incapable of holding this post."
 	 GRE_Giorgios_Lavdas_mhc_sco:0 "Giorgios Lavdas"
 	 Giorgios_Lavdas_dead:0 " is incapable of holding this post."
 	 GRE_Paraskos_Melissinos_mhc_sco:0 "Paraskos Melissinos"
@@ -15701,8 +15683,6 @@
 	 Alexiou_Tsamotos_dead:0 " is incapable of holding this post."
 	 GRE_Petros_Voulgaris_cnav_sco:0 "Petros Voulgaris"
 	 Petros_Voulgaris_dead:0 " is incapable of holding this post."
-	 GRE_Anastassio_Sakellariou_cnav_ade:0 "Anastassio Sakellariou"
-	 Anastassio_Sakellariou_dead:0 " is incapable of holding this post."
 	 GRE_Alexandros_Oikonomou_cnav_npo:0 "Alexandros Oikonomou"
 	 Alexandros_Oikonomou_dead:0 " is incapable of holding this post."
 
@@ -15711,8 +15691,6 @@
 	 Nikos_Beloyannis_dead:0 " is incapable of holding this post."
 	 GRE_Euthanassos_Perrikos_cair_sli:0 "Euthanassos Perrikos"
 	 Euthanassos_Perrikos_dead:0 " is incapable of holding this post."
-	 GRE_Gaecia_Geanados_cair_sli:0 "Gaecia Geanados"
-	 Gaecia_Geanados_dead:0 " is incapable of holding this post."
 	 GRE_Anastassios_Bardivilias_cair_sco:0 "Anastassios Bardivilias"
 	 Anastassios_Bardivilias_dead:0 " is incapable of holding this post."
 	 GRE_Antoine_Frangulis_cair_sco:0 "Antoine Frangulis"
@@ -17601,6 +17579,8 @@
 	 Thomas_Johnson_dead:0 " is incapable of holding this post."
 	 IRE_William_Norton_hog_sde:0 "William Norton"
 	 William_Norton_dead:0 " is incapable of holding this post."
+	 IRE_Sean_T_O'Ceallaigh_hog_sli:0 "Sean T. O'Ceallaigh"
+	 Sean_T_O'Ceallaigh_dead:0 " is incapable of holding this post."
 	 IRE_Dan_Breen_hog_mli:0 "Dan Breen"
 	 Dan_Breen_dead:0 " is incapable of holding this post."
 	 IRE_Sean_Lemass_hog_mli:0 "Seán Lemass"
@@ -17637,6 +17617,8 @@
 	 William_Norton_dead:0 " is incapable of holding this post."
 	 IRE_Eamon_de_Valera_for_sli:0 "Eamon de Valera"
 	 Eamon_de_Valera_dead:0 " is incapable of holding this post."
+	 IRE_John_Hearne_for_sli:0 "John Hearne"
+	 John_Hearne_dead:0 " is incapable of holding this post."
 	 IRE_Patrick_A_Mulcahy_for_mli:0 "Patrick A. Mulcahy"
 	 Patrick_A_Mulcahy_dead:0 " is incapable of holding this post."
 	 IRE_John_A_Costello_for_sco:0 "John A. Costello"
@@ -26767,6 +26749,8 @@
 	 Rajaram_II_of_Kolhapur_dead:0 " is incapable of holding this post."
 	 PRF_Osman_Ali_Khan_hog_pau:0 "Osman Ali Khan"
 	 Osman_Ali_Khan_dead:0 " is incapable of holding this post."
+	 PRF_Azam_Jah_of_Berar_hog_pau:0 "Azam Jah of Berar"
+	 Azam_Jah_of_Berar_dead:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
 	 PRF_Shri_Khwaja_Moin_ud_din_Khan_for_mli:0 "Shri Khwaja Moin ud din Khan"
@@ -26777,7 +26761,7 @@
 	 K_M_Panikkar_dead:0 " is incapable of holding this post."
 	 PRF_Kazi_Zainul_Abedin_for_sco:0 "Kazi Zainul Abedin"
 	 Kazi_Zainul_Abedin_dead:0 " is incapable of holding this post."
-	 PRF_Maharaja_Srish_Kumar_Nandy_for_sco:0 "Maharaja Srish Kumar Nandy"
+	 PRF_Maharaja_Srish_Kumar_Nandy_for_pau:0 "Maharaja Srish Kumar Nandy"
 	 Maharaja_Srish_Kumar_Nandy_dead:0 " is incapable of holding this post."
 	 PRF_Chithira_Thirunal_Balarama_Varma_for_ade:0 "Chithira Thirunal Balarama Varma"
 	 Chithira_Thirunal_Balarama_Varma_dead:0 " is incapable of holding this post."
@@ -26789,10 +26773,14 @@
 	 Mirza_Muhammad_Ismail_dead:0 " is incapable of holding this post."
 	 PRF_Muhammad_Ahmad_Said_Khan_Chhatari_for_ade:0 "Muhammad Ahmad Said Khan Chhatari"
 	 Muhammad_Ahmad_Said_Khan_Chhatari_dead:0 " is incapable of holding this post."
-	 PRF_S_Rm_M_Annamalai_Chettiar_for_ade:0 "S. Rm. M. Annamalai Chettiar"
+	 PRF_S_Rm_M_Annamalai_Chettiar_for_pau:0 "S. Rm. M. Annamalai Chettiar"
 	 S_Rm_M_Annamalai_Chettiar_dead:0 " is incapable of holding this post."
 	 PRF_Sri_Jadunath_Sarkar_for_ade:0 "Sri Jadunath Sarkar"
 	 Sri_Jadunath_Sarkar_dead:0 " is incapable of holding this post."
+	 PRF_Mirza_Muhammad_Ismail_for_pau:0 "Mirza Muhammad Ismail"
+	 Mirza_Muhammad_Ismail_dead:0 " is incapable of holding this post."
+	 PRF_Osman_Ali_Khan_for_pau:0 "Osman Ali Khan"
+	 Osman_Ali_Khan_dead:0 " is incapable of holding this post."
 
 	### Economy Minister ###
 	 PRF_Akbar_Hydari_eco_sco:0 "Akbar Hydari"
@@ -26801,7 +26789,7 @@
 	 Cattamanchi_Ramalinga_Reddy_dead:0 " is incapable of holding this post."
 	 PRF_M_K_Vellodi_eco_sco:0 "M. K. Vellodi"
 	 M_K_Vellodi_dead:0 " is incapable of holding this post."
-	 PRF_Maharaja_Srish_Kumar_Nandy_eco_sco:0 "Maharaja Srish Kumar Nandy"
+	 PRF_Maharaja_Srish_Kumar_Nandy_eco_pau:0 "Maharaja Srish Kumar Nandy"
 	 Maharaja_Srish_Kumar_Nandy_dead:0 " is incapable of holding this post."
 	 PRF_Muhammad_Raziuddin_Siddiqui_eco_sco:0 "Muhammad Raziuddin Siddiqui"
 	 Muhammad_Raziuddin_Siddiqui_dead:0 " is incapable of holding this post."
@@ -26809,7 +26797,7 @@
 	 Nawab_Fazal_Nawaz_Jung_Bahadur_dead:0 " is incapable of holding this post."
 	 PRF_Nawab_Mir_Alam_Ali_Khan_eco_sco:0 "Nawab Mir Alam Ali Khan"
 	 Nawab_Mir_Alam_Ali_Khan_dead:0 " is incapable of holding this post."
-	 PRF_Aga_Khan_III_eco_ade:0 "Aga Khan III"
+	 PRF_Aga_Khan_III_eco_pau:0 "Aga Khan III"
 	 Aga_Khan_III_dead:0 " is incapable of holding this post."
 	 PRF_Chintamanrao_II_Dhundirajao_Patwardhan_eco_ade:0 "Chintamanrao II Dhundirajao Patwardhan"
 	 Chintamanrao_II_Dhundirajao_Patwardhan_dead:0 " is incapable of holding this post."
@@ -26831,7 +26819,7 @@
 	 Khengarji_III_Sawai_Bahadur_dead:0 " is incapable of holding this post."
 	 PRF_Albion_Rajkumar_Banerjee_sec_ade:0 "Albion Rajkumar Banerjee"
 	 Albion_Rajkumar_Banerjee_dead:0 " is incapable of holding this post."
-	 PRF_M_Patanjali_Sastri_sec_ade:0 "M. Patanjali Sastri"
+	 PRF_M_Patanjali_Sastri_sec_pau:0 "M. Patanjali Sastri"
 	 M_Patanjali_Sastri_dead:0 " is incapable of holding this post."
 	 PRF_Maharaja_Pratap_Singh_Gaekwad_sec_ade:0 "Maharaja Pratap Singh Gaekwad"
 	 Maharaja_Pratap_Singh_Gaekwad_dead:0 " is incapable of holding this post."
@@ -26843,19 +26831,23 @@
 	 Raja_Bahadur_Venkatarama_Reddy_dead:0 " is incapable of holding this post."
 	 PRF_Sayyid_Wasif_Ali_Mirza_Khan_Bahadur_sec_ade:0 "Sayyid Wasif Ali Mirza Khan Bahadur"
 	 Sayyid_Wasif_Ali_Mirza_Khan_Bahadur_dead:0 " is incapable of holding this post."
-	 PRF_Syed_Kasim_Razvi_sec_ade:0 "Syed Kasim Razvi"
+	 PRF_Syed_Kasim_Razvi_sec_pau:0 "Syed Kasim Razvi"
 	 Syed_Kasim_Razvi_dead:0 " is incapable of holding this post."
 	 PRF_T_Raghavaiah_sec_ade:0 "T. Raghavaiah"
 	 T_Raghavaiah_dead:0 " is incapable of holding this post."
+	 PRF_Syed_Ahmed_El_Edroos_sec_pau:0 "Syed Ahmed El Edroos"
+	 Syed_Ahmed_El_Edroos_dead:0 " is incapable of holding this post."
+	 PRF_Azam_Jah_of_Berar_sec_pau:0 "Azam Jah of Berar"
+	 Azam_Jah_of_Berar_dead:0 " is incapable of holding this post."
 
 	### Intelligence Minister ###
 	 PRF_Maharaja_K_S_Digvijaysinhji_int_sde:0 "Maharaja K. S. Digvijaysinhji"
 	 Maharaja_K_S_Digvijaysinhji_dead:0 " is incapable of holding this post."
 	 PRF_Rajendrasinhji_Jadeja_int_sco:0 "Rajendrasinhji Jadeja"
 	 Rajendrasinhji_Jadeja_dead:0 " is incapable of holding this post."
-	 PRF_Annepu_Parasuramdas_Patro_int_ade:0 "Annepu Parasuramdas Patro"
+	 PRF_Annepu_Parasuramdas_Patro_int_pau:0 "Annepu Parasuramdas Patro"
 	 Annepu_Parasuramdas_Patro_dead:0 " is incapable of holding this post."
-	 PRF_Azizul_Haque_int_ade:0 "Azizul Haque"
+	 PRF_Azizul_Haque_int_pau:0 "Azizul Haque"
 	 Azizul_Haque_dead:0 " is incapable of holding this post."
 	 PRF_Hemchandra_Raychaudhuri_int_ade:0 "Hemchandra Raychaudhuri"
 	 Hemchandra_Raychaudhuri_dead:0 " is incapable of holding this post."
@@ -26881,7 +26873,7 @@
 	 Rao_Raja_Kalyan_Singh_Bahadur_dead:0 " is incapable of holding this post."
 	 PRF_Kodandera_Madappa_Cariappa_mhc_ade:0 "Kodandera Madappa Cariappa"
 	 Kodandera_Madappa_Cariappa_dead:0 " is incapable of holding this post."
-	 PRF_Muhammad_Ahmad_Said_Khan_Chhatari_mhc_ade:0 "Muhammad Ahmad Said Khan Chhatari"
+	 PRF_Muhammad_Ahmad_Said_Khan_Chhatari_mhc_pau:0 "Muhammad Ahmad Said Khan Chhatari"
 	 Muhammad_Ahmad_Said_Khan_Chhatari_dead:0 " is incapable of holding this post."
 	 PRF_Nawab_Subhan_Ali_Khan_mhc_ade:0 "Nawab Subhan Ali Khan"
 	 Nawab_Subhan_Ali_Khan_dead:0 " is incapable of holding this post."
@@ -26891,15 +26883,17 @@
 	 Sri_Ramakrishna_Ranga_Rao_dead:0 " is incapable of holding this post."
 	 PRF_Syed_Ahmed_El_Edroos_mhc_pau:0 "Syed Ahmed El Edroos"
 	 Syed_Ahmed_El_Edroos_dead:0 " is incapable of holding this post."
+	 PRF_Mahadeo_Singh_mhc_pau:0 "Mahadeo Singh"
+	 Mahadeo_Singh_dead:0 " is incapable of holding this post."
 
 	### Chief of Army ###
-	 PRF_Azam_Jah_of_Berar_carm_ade:0 "Azam Jah of Berar"
+	 PRF_Azam_Jah_of_Berar_carm_pau:0 "Azam Jah of Berar"
 	 Azam_Jah_of_Berar_dead:0 " is incapable of holding this post."
 	 PRF_Bir_Bikram_Kishore_Debbarman_carm_ade:0 "Bir Bikram Kishore Debbarman"
 	 Bir_Bikram_Kishore_Debbarman_dead:0 " is incapable of holding this post."
-	 PRF_Kodendera_Subayya_Thimayya_carm_ade:0 "Kodendera Subayya Thimayya"
+	 PRF_Kodendera_Subayya_Thimayya_carm_pau:0 "Kodendera Subayya Thimayya"
 	 Kodendera_Subayya_Thimayya_dead:0 " is incapable of holding this post."
-	 PRF_Nawab_Hashim_Nawaz_Jung_carm_ade:0 "Nawab Hashim Nawaz Jung"
+	 PRF_Nawab_Hashim_Nawaz_Jung_carm_sco:0 "Nawab Hashim Nawaz Jung"
 	 Nawab_Hashim_Nawaz_Jung_dead:0 " is incapable of holding this post."
 	 PRF_Nawab_Khwaja_Habibullah_Bahadur_carm_ade:0 "Nawab Khwaja Habibullah Bahadur"
 	 Nawab_Khwaja_Habibullah_Bahadur_dead:0 " is incapable of holding this post."
@@ -26911,6 +26905,8 @@
 	 Rajaram_II_of_Kolhapur_dead:0 " is incapable of holding this post."
 	 PRF_Sri_Ramakrishna_Ranga_Rao_carm_ade:0 "Sri Ramakrishna Ranga Rao"
 	 Sri_Ramakrishna_Ranga_Rao_dead:0 " is incapable of holding this post."
+	 PRF_Taley_Muhammed_Khan_of_Palanpur_carm_pau:0 "Taley Muhammed Khan of Palanpur"
+	 Taley_Muhammed_Khan_of_Palanpur_dead:0 " is incapable of holding this post."
 
 	### Chief of Navy ###
 	 PRF_Adhar_Kumar_Chatterjee_cnav_ade:0 "Adhar Kumar Chatterjee"
@@ -26919,13 +26915,13 @@
 	 D_N_Mukerji_dead:0 " is incapable of holding this post."
 	 PRF_Mir_Ahmed_Ali_cnav_ade:0 "Mir Ahmed Ali"
 	 Mir_Ahmed_Ali_dead:0 " is incapable of holding this post."
-	 PRF_Ram_Dass_Katari_cnav_ade:0 "Ram Dass Katari"
+	 PRF_Ram_Dass_Katari_cnav_pau:0 "Ram Dass Katari"
 	 Ram_Dass_Katari_dead:0 " is incapable of holding this post."
 
 	### Chief of Air Force ###
 	 PRF_Abdul_Naeem_Aziz_cair_sco:0 "Abdul Naeem Aziz"
 	 Abdul_Naeem_Aziz_dead:0 " is incapable of holding this post."
-	 PRF_Hrushikesh_Moolgavkar_cair_sco:0 "Hrushikesh Moolgavkar"
+	 PRF_Hrushikesh_Moolgavkar_cair_pau:0 "Hrushikesh Moolgavkar"
 	 Hrushikesh_Moolgavkar_dead:0 " is incapable of holding this post."
 	 PRF_Jagdish_Chandra_Varma_cair_sco:0 "Jagdish Chandra Varma"
 	 Jagdish_Chandra_Varma_dead:0 " is incapable of holding this post."
@@ -26943,6 +26939,10 @@
 	 HK_Patel_dead:0 " is incapable of holding this post."
 	 PRF_Mir_Yousuf_Ali_Khan_cair_ade:0 "Mir Yousuf Ali Khan"
 	 Mir_Yousuf_Ali_Khan_dead:0 " is incapable of holding this post."
+	 PRF_HK_Patel_cair_pau:0 "H.K Patel"
+	 HK_Patel_dead:0 " is incapable of holding this post."
+	 PRF_Alexander_Joseph_Sathyanathan_cair_pau:0 "Alexander Joseph Sathyanathan"
+	 Alexander_Joseph_Sathyanathan_dead:0 " is incapable of holding this post."
 
   ################################################################################################################################################################################################
   ### PRU
@@ -34673,6 +34673,8 @@
 	 Georges_Thone_dead:0 " is incapable of holding this post."
 	 WLL_Xavier_de_Grunne_sec_pau:0 "Xavier de Grunne"
 	 Xavier_de_Grunne_dead:0 " is incapable of holding this post."
+	 WLL_Andre_Moyen_sec_npo:0 "André Moyen"
+	 Andre_Moyen_dead:0 " is incapable of holding this post."
 	 WLL_Jean_Vermeire_sec_npo:0 "Jean Vermeire"
 	 Jean_Vermeire_dead:0 " is incapable of holding this post."
 	 WLL_John_Hagemans_sec_npo:0 "John Hagemans"
@@ -34703,6 +34705,8 @@
 	 Auguste_Buisseret_dead:0 " is incapable of holding this post."
 	 WLL_John_Hagemans_int_sco:0 "John Hagemans"
 	 John_Hagemans_dead:0 " is incapable of holding this post."
+	 WLL_Andre_Moyen_int_npo:0 "André Moyen"
+	 Andre_Moyen_dead:0 " is incapable of holding this post."
 	 WLL_Jose_Streel_int_npo:0 "José Streel"
 	 Jose_Streel_dead:0 " is incapable of holding this post."
 	 WLL_Paul_Ouwerx_int_npo:0 "Paul Ouwerx"
