RIP Annie Kenney

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -96,8 +96,8 @@ worldnews.25.t:0 "Niclas y Glais elected as Chairman of the TUC"
 worldnews.25.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union - Maximists, Autonomists, Federationists and Congregationists - to butt heads over the position. \n\nAnd as the dust settles, Welsh poet and leader of the Autonomists, Niclas y Glais, has been sworn in as the new Chairman. The Autonomists support further decentralisation of the Union of Britain and even greater autonomy to the Welsh and Scottish nations, perhaps even full independence."
 worldnews.25.a:0 "Interesting."
 
-worldnews.26.t:0 "Annie Kenney elected as Chairman of the TUC"
-worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union - Maximists, Autonomists, Federationists and Congregationists - to butt heads over the position. \n\nAnd as the dust settled, Annie Kenney, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Kenney is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach fit this situation."
+worldnews.26.t:0 "Sylvia Pankhurst elected as Chairman of the TUC"
+worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union - Maximists, Autonomists, Federationists and Congregationists - to butt heads over the position. \n\nAnd as the dust settled, Sylvia Pankhurst, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Pankhurst is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach fit this situation."
 worldnews.26.a:0 "Interesting."
 
 worldnews.27.t:0 "Arthur Horner elected as Chairman of the TUC"
