some more Austria stuff

--- a/localisation/KR_AustriaFoci_l_english.yml
+++ b/localisation/KR_AustriaFoci_l_english.yml
@@ -1,5 +1,17 @@
 ﻿l_english:
 
+AUS_hungarian_hegemony:0 "Hungarian Hegemony"
+HUN_hungarian_hegemony:0 "Hungarian Hegemony"
+HUN_hungarian_hegemony_broken:0 "Hungarian Hegemony Broken"
+
+AUS_integrating_galicia:0 "The Kingdom of Galicia"
+AUS_cisleithania_united:0 "Cisleithania United"
+AUS_switch_to_ahe:0 "A Centralised Austria-Hungary"
+
+AUS_austro-marxism:0 "Nations within a State"
+AUS_united_states:0 "A Federation of Equals"
+AUS_federate_hungary:0 ""
+
 ### These are placeholder localisations ###
 aus.700.t:0 "Kaiser Otto declares the Restauration of Dualism"
 aus.700.d:0 "To appease the Magyars, bla bla, go back to like before the Weltkrieg."
