Fix corrupted symbol

--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -456,7 +456,7 @@ BAT_ERP_FM4:0 "Political Establishment"
 BAT_ERP_FM4_desc:0 "Our capitalists are becoming more and more powerful, even starting to influence our politics. If we let them capitalize on that political clout, they will become important and trustworthy allies."
 
 BAT_ERP_End:0 "Recovery from Crisis"
-BAT_ERP_End_desc:0 "Hurrah! Under our wise rule, the Duchy has survived this crisis. It seems, at least for us, that the worst of the Black Monday is over. Prosperity is once more the law of the land, and shall stay so!”
+BAT_ERP_End_desc:0 "Hurrah! Under our wise rule, the Duchy has survived this crisis. It seems, at least for us, that the worst of the Black Monday is over. Prosperity is once more the law of the land, and shall stay so!"
 
 BAT_Army_Start:0 "Baltic Army"
 BAT_Army_Start_desc:0 "Officially, we do have an army. But it actually consists of nothing more than a bunch of young boys with rifles. Military doctrine is the first thing we need to modernize. Decades have passed since the end of the Weltkrieg and our current doctrine is now clearly outdated."
