--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -312,7 +312,7 @@ CAN_abolish_parliament_desc:0 "The Weltkrieg, and the revolution that came in it
 CAN_north_atlantic:0 "Secure the North Atlantic"
 CAN_north_atlantic_desc:0 "The North Atlantic is the barrier which stands between us and the home islands, and the key route for much of our trade abroad. For too long has its only guard been reserve units staring away at it from the shore. It must be secured at all costs, with the full might of our Navy!"
 CAN_ireland_treaty:0 "Treaty with Ireland"
-CAN_ireland_treaty_desc:0 "The Irish might have an ugly history with the Empire, but they are no friends of the Syndicalists either. With the issue of Ulster long settled, perhaps they can be enticed to join the Entente in exchange for protection from the radicals next door?"
+CAN_ireland_treaty_desc:0 "The Irish might have an ugly history with the Empire, but they are no friends of the Syndicalists either. With the issue of Ulster long settled and the Irish having turned to us for protection from the reds, perhaps they can be enticed to pursue closer relations and we can put the past behind us."
 CAN_ireland_ally:0 "Alliance for Aid"
 CAN_ireland_ally_desc:0 "The Irish have agreed to accept our protection but have sadly stopped short of committing fully to an alliance. Perhaps if we sweeten the pot even more, we could entice them to join the Entente? There are surely a few things we can still offer other than words."
 CAN_claim_greenland:0 "Demand Danish Atlantic Possessions"
